# ot--harjoitustyo

./: .gitignore  README.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
otm-harjoitustyo/: .coveragerc  pyproject.toml  tasks.py
otm-harjoitustyo/dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
otm-harjoitustyo/src/: deck.py  discardpile.py  draggedcard.py  drawpile.py  endpile.py  eventqueue.py  gameloop.py  index.py  initialize_database.py  load_image.py  renderer.py
otm-harjoitustyo/src/data/: hiscores.py
otm-harjoitustyo/src/deck/: card.py  deck.py  discardpile.py  draggedcard.py  drawpile.py  endpile.py  gameloop.py  tableau.py
otm-harjoitustyo/src/interface/: hitboxes.py  menu.py  renderer.py
otm-harjoitustyo/src/tests/: card_test.py  deck_test.py  discardpile_test.py  drawpile_test.py  endpile_test.py  gameloop_test.py  tableau_test.py
