[tool.poetry]
name = "otm-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Mikko Anttonen <mikkohj.anttonen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.0"
invoke = "^1.6.0"
coverage = "^6.1.2"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^6.1.2"
pylint = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
